2005-10-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangocairo.c: Added 'pango_' prefix.

	* sample/cairo.rb: Added sample using cairo.

	* src/rbpangocairo.c: Pango::CairoFontMap.new ->
	Pango::CairoFontMap.create because Pango::CairoFontMap is Module.

2005-10-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangocontext.c
	(rcontext_set_font_options, rcontext_get_font_options): Added
	NULL/nil check.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/makeversion.rb: Removed. Use make_version_header() of 
	Ruby/GLib.
	* extconf.rb: Follow above change.

2005-10-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix a compilation error on Win32 and Ruby/Cairo.

2005-10-05  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: Added Cairo check.

	* src/rbpango.h: Include Cairo related headers.

	* src/rbpangocontext.c: Added 1.10 API.

	* src/rbpangocairo.c: Added.

	* src/lib/pango.rb: Require 'cairo'.

2005-10-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangomain.c: Raises RuntimeError if 1st argument is nil. 

2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpango.c: Renamed Pango::VERSION to Pango::BUILD_VERSION.
	Removed Pango::(MAJOR|MINOR|MICRO)_VERSION.

2005-09-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoitem.c: Check pango version for pango_item_get_type().
	* src/rbpangolayoutline.c: ditto.

2005-09-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoengine.c: Added (class names only, Pango::Engine,
	Pango::EngineShape, Pango::EngineLang). 
	* src/rbpangoanalysis.c: Fix problems not to show correct class names
	of Pango::Analysis#shape_engine, #lang_engine. 
	* src/rbpangolayoutline.c: Fix a segfault of Pango::LayoutLine#runs. 
	* src/rbpangolayoutiter.c: Fix a bug of Pango::LayoutIter#line. 
	* sample/script.rb, break.rb, item.rb, layout.rb: Added. 

2005-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoscriptiter.c: Added Pango::ScriptIter for Pango-1.4.
	* src/rbpangoscript.c: Added Pango::Script for Pango-1.4.