@@ -1,3 +1,9 @@
+2005-10-13  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbpangofontset.c, rbpangofontsetsimple.c,
+	  src/lib/pango.rb: Rename FontSet to Fontset with backward
+	  compatibility.
+
 2005-10-14  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbpangocairo.c: Added 'pango_' prefix.
